== Release 4.4.3.1

    * Fixed: ADC conversion time Tad for PIC16F88

== Release 4.4.3.0

    * New: 7-SEGMENT FONT CONVERTER instruction.

    * New: BINARY TO BCD CONVERTER instruction.

    * Fixed: QUADRATURE ENCODER start value.

    * Fixed: build failed in CCS when disabling pull up resistor #128

    * Fixed: #USE RS232 & #USE DELAY ansi c generator for PICC build fails depending on their position #127

    * Fixed: Russian localization

    * PIC: You can flash the PIC MCU thru the PICkit 3 Command Line Interface.
      Press F6 to call flashMcu.bat
      See flashMcu.bat and readMcu.bat

== Release 4.4.2.0

    * New: Incremental QUADRATURE ENCODER instruction.
    See manual.txt and
    https://github.com/LDmicro/LDmicro/wiki/Incremental-QUADRATURE-ENCODER

    Incremental QUADRATURE ENCODER controls the brightness of the LED (PWM out)
    https://github.com/LDmicro/LDmicro/wiki/Incremental-QUADRATURE-ENCODER-controls-the-brightness-of-the-LED-(PWM-out)

    * Fixed: Bug: UART box shows up even if UART is deleted from the ladder
    diagram after simulating.(#126)

    * Fixed: The code generated for the Reset instruction
    of any Counter type looks incorrect as the counter variable is reset
    to 0 and not to the counter's "Start Value" value.(#125)

    * Fixed: The code generated by "Compile ANSIC" for the Look-Up Table
    instruction [LUT] does not include a declaration for the table's index
    variable.(#124)

    * Fixed: The code generated by "Compile ANSIC" for the Logical Shift
    instruction generates a declaration "STATIC SBYTE 1 = 0;" (#123)

    * Fixed: For the PWL instruction display the Index variable in the GUI
    and allow its size to be edited.(#122)

    * Fixed: Bug in FORMATTED STRING OVER UART element, when using
    command \0xFE instead of \xFE ldmicro closes.(#120)

== Release 4.4.1.1

    * Fixed: Bug in insert SET BIT instructions with arduino (#118)

== Release 4.4.1.0
